<resources>
    <string name="app_name">TestBTC</string>
    <string name="text_start_btn">START</string>
    <string name="text_your_balance">YOUR BALANCE</string>
    <string name="text_balance_btc_satoshi">15 Satoshi</string>
    <string name="text_btn_boost">BOOST</string>
    <string name="text_btn_take_to_btc">TAKE BTC</string>
    <string name="text_content_progressBar">0%</string>
    <string name="text_server_1">SERVER 1</string>
    <string name="text_ping">Ping</string>
    <string name="text_value_ping_server1">12</string>
    <string name="text_ms">ms</string>
    <string name="text_server_2">SERVER 2</string>
    <string name="text_server_3">SERVER 3</string>
    <string name="text_server_4">SERVER 4</string>
    <string name="text_value_ping_server2">6</string>
    <string name="text_btc">0.00000015 BTC</string>
    <string name="text_value_ping_server4">10</string>
    <string name="text_value_ping_server3">25</string>
    <string name="balance_satoshi">%1$d Satoshi</string>
    <string name="balance_BTC">%.8f BTC</string>
    <string name="process_progress">%1$d %%</string>
    <string name="intent_share">Позвольте мне порекомендовать вам это приложение</string>
</resources>